--- a/src/app/components/molecules/fractal/fractal.component.html
+++ b/src/app/components/molecules/fractal/fractal.component.html
@@ -1,12 +1,18 @@
-@if (fractal) {
-  <table mat-table [dataSource]="dataSource()">
-    @for (column of displayedColumns(); track column) {
+@if (areControls()) {
+  @for(control of controls(); track control) {
+    <app-control [dto]="control"></app-control>
+  }
+}
+@else {
+  <table mat-table [dataSource]="fractals()">
+    @for (column of sort(); track column) {
       <ng-container [matColumnDef]="column">
         <th mat-header-cell *matHeaderCellDef>{{column}}</th>
         <td mat-cell *matCellDef="let fractal"> {{fractal.controls[column].data}} </td>
       </ng-container>
     }
-    <tr mat-header-row *matHeaderRowDef="displayedColumns()"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns()"></tr>
+    <tr mat-header-row *matHeaderRowDef="sort()"></tr>
+    <tr mat-row *matRowDef="let row; columns: sort()" appClick (onClick)="onClick(row)"
+      [class.selected]="fls.has(row)"></tr>
   </table>
 }
