--- a/src/app/components/atoms/control/control.component.html
+++ b/src/app/components/atoms/control/control.component.html
@@ -1,4 +1,1 @@
-<div class="Control">
-  <app-input [label]="dto.indicator" [formControl]="indicator"></app-input>
-  <app-input [label]="dto.data" [formControl]="data"></app-input>
-</div>
+<app-input [label]="dto.indicator" [formControl]="data"></app-input>
