--- a/src/app/components/atoms/control/control.component.html
+++ b/src/app/components/atoms/control/control.component.html
@@ -1,1 +1,1 @@
-<app-input [label]="dto.indicator" [formControl]="data"></app-input>
+<app-input [label]="control.indicator" [formControl]="data"></app-input>
