--- a/src/app/components/molecules/sidenav/sidenav.component.html
+++ b/src/app/components/molecules/sidenav/sidenav.component.html
@@ -1,5 +1,5 @@
 <mat-drawer-container class="mat-drawer-container-app-sidenav" autosize>
-  <mat-drawer [opened]="svs.isOpened()" [disableClose]="false" class="mat-drawer-app-sidenav" mode="side"
+  <mat-drawer [opened]="ss.sidenav() === 'Open'" [disableClose]="false" class="mat-drawer-app-sidenav" mode="side"
     position="end">
     <mat-list class="mat-list-app-sidenav">
       @for (tap of ts.taps(); track tap.name) {
