--- a/src/app/components/molecules/sidenav/sidenav.component.html
+++ b/src/app/components/molecules/sidenav/sidenav.component.html
@@ -2,7 +2,7 @@
   <mat-drawer [opened]="ss.sidenav() === 'Open'" [disableClose]="false" class="mat-drawer-app-sidenav" mode="side"
     position="end">
     <mat-list class="mat-list-app-sidenav">
-      @for (tap of ts.taps(); track tap.name) {
+      @for (tap of ts.data(); track tap.name) {
         <app-tap [config]="tap"></app-tap>
       }
     </mat-list>
