--- a/src/app/components/molecules/sidenav/sidenav.component.html
+++ b/src/app/components/molecules/sidenav/sidenav.component.html
@@ -1,11 +1,12 @@
-<mat-drawer-container class="mat-drawer-container-app-sidenav" autosize>
-  <mat-drawer [opened]="ss.sidenav() === 'Open'" [disableClose]="false" class="mat-drawer-app-sidenav" mode="side"
-    position="end">
-    <mat-list class="mat-list-app-sidenav">
-      @for (tap of ts.data(); track tap.name) {
-        <app-tap [config]="tap"></app-tap>
-      }
-    </mat-list>
-  </mat-drawer>
-  <router-outlet></router-outlet>
-</mat-drawer-container>
+@if (taps(); as taps) {
+  <mat-drawer-container class="mat-drawer-container-app-sidenav" autosize>
+    <mat-drawer [opened]="open()" [disableClose]="false" class="mat-drawer-app-sidenav" mode="side" position="end">
+      <mat-list class="mat-list-app-sidenav">
+        @for (tap of taps; track tap.name) {
+          <app-tap [config]="tap"></app-tap>
+        }
+      </mat-list>
+    </mat-drawer>
+    <router-outlet></router-outlet>
+  </mat-drawer-container>
+}
