--- a/src/app/components/organisms/modifier/modifier.component.html
+++ b/src/app/components/organisms/modifier/modifier.component.html
@@ -1,7 +1,7 @@
-@if (fractals(); as fractals) {
-  <!-- @if (rs.params()?.modifier === 'Edit') {
-    @for(fractal of fractals; track fractal.id) {
-      <app-controls [controls]="fractal.controls | array"></app-controls>
-    }
-  } -->
+@if (fractals) {
+@if (rs.segments().modifier === 'Edit') {
+@for(fractal of fractals; track fractal.id) {
+<app-controls [controls]="fractal.controls | array"></app-controls>
+}
+}
 }
