--- a/src/app/components/molecules/sidenav/sidenav.component.html
+++ b/src/app/components/molecules/sidenav/sidenav.component.html
@@ -1,8 +1,8 @@
 <mat-drawer-container class="mat-drawer-container-app-sidenav" autosize>
   <mat-drawer [opened]="open()" [disableClose]="false" class="mat-drawer-app-sidenav" mode="side" position="end">
     <mat-list class="mat-list-app-sidenav">
-      @for (tap of taps(); track tap.name) {
-      <app-tap [config]="tap"></app-tap>
+      @for (tap of taps(); track $index) {
+      <app-tap [tap]="tap"></app-tap>
       }
     </mat-list>
   </mat-drawer>
