--- a/src/app/components/atoms/manager/manager.component.html
+++ b/src/app/components/atoms/manager/manager.component.html
@@ -1,6 +1,7 @@
-<button mat-mini-fab [disabled]="ss.isFetching()" appClick (onClick)="onClick()" (onHoldClick)="onHoldClick()">
-  @if (ss.isFetching()) {
-  <mat-spinner color="accent" diameter="40"></mat-spinner>
-  }
-  <mat-icon>apps</mat-icon>
+@if (fs.data(); as data) {
+<button mat-mini-fab appClick (onClick)="onClick()" (onHoldClick)="onHoldClick()">
+  <mat-icon>{{(data | fp: 'Manager' | cp).Icon}}</mat-icon>
 </button>
+} @else {
+<mat-spinner color="accent" diameter="40"></mat-spinner>
+}
