--- a/src/app/components/molecules/sidenav/sidenav.component.html
+++ b/src/app/components/molecules/sidenav/sidenav.component.html
@@ -1,8 +1,10 @@
 <mat-drawer-container class="mat-drawer-container-app-sidenav" autosize>
   <mat-drawer [opened]="open()" [disableClose]="false" class="mat-drawer-app-sidenav" mode="side" position="end">
     <mat-list class="mat-list-app-sidenav">
-      @for (tap of taps(); track $index) {
-      <app-tap [data]="tap.controls| controlsData"></app-tap>
+      @if(fs.data(); as data) {
+      @for (fractal of data | fp: 'Pages' | ap; track fractal.id) {
+      <app-tap [data]="fractal | cp"></app-tap>
+      }
       }
     </mat-list>
   </mat-drawer>
