--- a/src/app/components/organisms/modifier/modifier.component.html
+++ b/src/app/components/organisms/modifier/modifier.component.html
@@ -1,7 +1,7 @@
-@if (fractals) {
+<!-- @if (fractals) {
 @if (rs.segments().modifier === 'Edit') {
 @for(fractal of fractals; track fractal.id) {
 <app-controls [controls]="fractal.controls | array"></app-controls>
 }
 }
-}
+} -->
