--- a/src/app/components/organisms/page/page.component.html
+++ b/src/app/components/organisms/page/page.component.html
@@ -1,5 +1,17 @@
-<!-- @if (data(); as data) {
-<table mat-table appTable>
+@if (fs.data(); as data) {
+<!-- <table mat-table [dataSource]="dataSource(data)"> -->
+<!-- @for (column of (pages.controls | controls).Sort; track column) {
+  <ng-container [matColumnDef]="column">
+    <th mat-header-cell *matHeaderCellDef>{{column}}</th>
+    <td mat-cell *matCellDef="let fractal"> {{fractal.controls[column].data}} </td>
+  </ng-container>
+  }
+  <tr mat-header-row *matHeaderRowDef="(pages.controls | controls).Sort"></tr>
+  <tr mat-row *matRowDef="let row; columns: (pages.controls | controls).Sort"></tr> -->
+<!-- </table> -->
+}
+
+<!-- <table mat-table appTable>
   @for (column of data.sort; track column) {
   <ng-container [matColumnDef]="column">
     <th mat-header-cell *matHeaderCellDef>{{column}}</th>
@@ -9,5 +21,4 @@
   <tr mat-header-row *matHeaderRowDef="data.sort"></tr>
   <tr mat-row *matRowDef="let row; columns: data.sort" appClick type="Fractal" (onClick)="onClick(row)"
     (onDoubleClick)="onDoubleClick(row)" [class.selected]="fls.selected().includes(row)"></tr>
-</table>
-} -->
+</table> -->
