--- a/src/app/components/molecules/sidenav/sidenav.component.html
+++ b/src/app/components/molecules/sidenav/sidenav.component.html
@@ -1,11 +1,12 @@
 <mat-drawer-container class="mat-drawer-container-app-sidenav" autosize>
-  <mat-drawer [opened]="open()" [disableClose]="false" class="mat-drawer-app-sidenav" mode="side" position="end">
+  <mat-drawer
+    [opened]="open()"
+    [disableClose]="false"
+    class="mat-drawer-app-sidenav"
+    mode="side"
+    position="end">
     <mat-list class="mat-list-app-sidenav">
-      @if(fs.data(); as data) {
-      @for (fractal of data | fp: 'Pages' | ap; track fractal.id) {
-      <app-tap [data]="fractal | cp"></app-tap>
-      }
-      }
+      <app-render type="Taps" name="Pages"></app-render>
     </mat-list>
   </mat-drawer>
   <router-outlet></router-outlet>
