--- a/src/app/components/atoms/tap/tap.component.html
+++ b/src/app/components/atoms/tap/tap.component.html
@@ -1,5 +1,5 @@
 @if (fractal | cp; as controls) {
-  <button mat-flat-button>
+  <button mat-flat-button appClick (onClick)="onClick.emit(fractal)">
     <mat-icon>{{ controls.Icon }}</mat-icon
     >{{ controls.Fractal }}
   </button>
