--- a/src/app/components/atoms/manager/manager.component.html
+++ b/src/app/components/atoms/manager/manager.component.html
@@ -1,11 +1,7 @@
-@if (fs.data(); as data) {
-  <button
-    mat-mini-fab
-    appClick
-    (onClick)="onClick()"
-    (onHoldClick)="onHoldClick()">
-    <mat-icon>{{ (data | fp: 'Manager' | cp).Icon }}</mat-icon>
-  </button>
-} @else {
-  <mat-spinner color="accent" diameter="40"></mat-spinner>
-}
+<button
+  mat-mini-fab
+  appClick
+  (onClick)="onClick()"
+  (onHoldClick)="onHoldClick()">
+  <mat-icon>{{ fractal.data('Icon') }}</mat-icon>
+</button>
