--- a/src/app/components/organisms/sidenav/sidenav.component.html
+++ b/src/app/components/organisms/sidenav/sidenav.component.html
@@ -6,10 +6,11 @@
     mode="side"
     position="end">
     <mat-list class="mat-list-app-sidenav">
-      <app-render
-        type="Taps"
-        name="Pages"
-        (onClick)="onClick($event)"></app-render>
+      @for (name of fractal.sort(); track $index) {
+        <app-tap
+          [fractal]="fractal.find(name)"
+          (onClick)="onClick($event)"></app-tap>
+      }
     </mat-list>
   </mat-drawer>
   <router-outlet></router-outlet>
