--- a/src/app/components/atoms/tap/tap.component.html
+++ b/src/app/components/atoms/tap/tap.component.html
@@ -1,6 +1,4 @@
-@if (fractal | cp; as controls) {
-  <button mat-flat-button appClick (onClick)="onClick.emit(fractal)">
-    <mat-icon>{{ controls.Icon }}</mat-icon
-    >{{ controls.Fractal }}
-  </button>
-}
+<button mat-flat-button (click)="onClick.emit(fractal)">
+  <mat-icon>{{ fractal.data('Icon') }}</mat-icon>
+  {{ fractal.data('Fractal') }}
+</button>
