--- a/src/app/components/atoms/header/header.component.html
+++ b/src/app/components/atoms/header/header.component.html
@@ -1,1 +1,1 @@
-<h1>{{ rs.segments().page || 'Home' }} {{ rs.segments().modifier }}</h1>
+<h1>{{ rs.params()[0] || 'Home' }} {{ rs.params()[1] }}</h1>
