--- a/src/app/components/atoms/manager/manager.component.html
+++ b/src/app/components/atoms/manager/manager.component.html
@@ -3,5 +3,5 @@
   appClick
   (onClick)="onClick()"
   (onHoldClick)="onHoldClick()">
-  <mat-icon>{{ fractal.data('Icon') }}</mat-icon>
+  <mat-icon>{{ fractal.controls.icon }}</mat-icon>
 </button>
