--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
 <app-header></app-header>
-@if (fs.data(); as data) {
-  <app-sidenav [fractal]="data.find('Pages')"></app-sidenav>
-}
+<app-sidenav></app-sidenav>
 <app-toolbar></app-toolbar>
