--- a/src/app/components/atoms/table/table.component.html
+++ b/src/app/components/atoms/table/table.component.html
@@ -1,16 +1,18 @@
-<table mat-table [dataSource]="dataSource">
-  @for (column of sort; track column) {
-    <ng-container [matColumnDef]="column">
-      <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
-      <td mat-cell *matCellDef="let fractal">
-        {{ fractal.controls[column].data }}
-      </td>
-    </ng-container>
-  }
-  <tr mat-header-row *matHeaderRowDef="sort"></tr>
-  <tr
-    mat-row
-    *matRowDef="let row; columns: sort"
-    appClick
-    (onClick)="onClick.emit(row)"></tr>
-</table>
+@if (sort.length) {
+  <table mat-table [dataSource]="fractal.array">
+    @for (column of sort; track column) {
+      <ng-container [matColumnDef]="column">
+        <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
+        <td mat-cell *matCellDef="let fractal">
+          {{ fractal.controls.data(column) }}
+        </td>
+      </ng-container>
+    }
+    <tr mat-header-row *matHeaderRowDef="sort"></tr>
+    <tr
+      mat-row
+      *matRowDef="let row; columns: sort"
+      appClick
+      (onClick)="onClick.emit(row)"></tr>
+  </table>
+}
