--- a/src/app/components/organisms/sidenav/sidenav.component.html
+++ b/src/app/components/organisms/sidenav/sidenav.component.html
@@ -1,15 +1,17 @@
 <mat-drawer-container class="mat-drawer-container-app-sidenav" autosize>
   <mat-drawer
-    [opened]="open()"
+    [opened]="!ms.isHold()"
     [disableClose]="false"
     class="mat-drawer-app-sidenav"
     mode="side"
     position="end">
     <mat-list class="mat-list-app-sidenav">
-      @for (name of fractal.sort(); track $index) {
-        <app-tap
-          [fractal]="fractal.find(name)"
-          (onClick)="onClick($event)"></app-tap>
+      @if (fractal(); as fractal) {
+        @for (name of fractal.controls.sort; track $index) {
+          @if (fractal.find(name); as fractal) {
+            <app-tap [fractal]="fractal" (onClick)="onClick($event)"></app-tap>
+          }
+        }
       }
     </mat-list>
   </mat-drawer>
