wanna try use only url

--- a/src/app/components/atoms/manager/manager.component.html
+++ b/src/app/components/atoms/manager/manager.component.html
@@ -1,7 +1,3 @@
-<button
-  mat-mini-fab
-  appClick
-  (onClick)="onClick()"
-  (onHoldClick)="onHoldClick()">
-  <mat-icon>{{ fractal.controls.icon }}</mat-icon>
+<button mat-mini-fab appClick (onClick)="onClick()" (onHoldClick)="onHoldClick()">
+  <mat-icon>{{ fractal.icon }}</mat-icon>
 </button>
