--- a/src/app/components/atoms/controls/controls.component.html
+++ b/src/app/components/atoms/controls/controls.component.html
@@ -1,7 +1,5 @@
 <form>
   @for (control of controls; track control.id) {
-    <app-input
-      [label]="control.indicator"
-      [formControl]="formControl(control)"></app-input>
+    <app-input [label]="control.indicator" [formControl]="formControl(control)"></app-input>
   }
 </form>
