--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-header></app-header>
+<app-header [first]="ss.page.signal()?.name" [second]="ss.modifier.signal()?.name"></app-header>
 <app-sidenav></app-sidenav>
 <app-toolbar></app-toolbar>
