--- a/src/app/components/atoms/table/table.component.html
+++ b/src/app/components/atoms/table/table.component.html
@@ -2,7 +2,9 @@
   <table mat-table [dataSource]="fractal.array">
     @for (column of sort; track column) {
       <ng-container [matColumnDef]="column">
-        <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
+        <th mat-header-cell *matHeaderCellDef>
+          {{ column }}
+        </th>
         <td mat-cell *matCellDef="let fractal">
           {{ fractal.data(column) }}
         </td>
@@ -12,7 +14,7 @@
     <tr
       mat-row
       *matRowDef="let row; columns: sort"
-      [class.row-is-clicked]="clickedRows.has(row.id)"
+      [class.row-is-clicked]="clickedRows.has(row)"
       appClick
       (onClick)="onClick.emit(row)"></tr>
   </table>
