--- a/src/app/components/organisms/page/page.component.html
+++ b/src/app/components/organisms/page/page.component.html
@@ -1,3 +1,3 @@
-@if (fs.fractal()?.find(this.Pages); as fractal) {
-  <app-table [fractal]="fractal" [clickedRows]="items" (onClick)="onClick($event)"></app-table>
+@if (ss.root.signal()?.find(this.Pages); as fractal) {
+  <app-table [fractal]="fractal" [clickedRows]="set" (onClick)="onClick($event)"></app-table>
 }
