--- a/src/app/components/molecules/toolbar/toolbar.component.html
+++ b/src/app/components/molecules/toolbar/toolbar.component.html
@@ -1,7 +1,3 @@
 <mat-toolbar color="primary" class="toolbar">
-  @if (ss.root.signal()?.find('Manager'); as fractal) {
-    <app-manager [fractal]="fractal"></app-manager>
-  } @else {
-    <mat-spinner color="accent" diameter="40"></mat-spinner>
-  }
+  <app-manager></app-manager>
 </mat-toolbar>
