--- a/src/app/components/atoms/header/header.component.css
+++ b/src/app/components/atoms/header/header.component.css
@@ -1,4 +1,5 @@
 h1 {
+  height: 32px;
   padding: var(--size-small);
   margin: 0;
   border-bottom: 1px var(--mat-sidenav-container-divider-color) solid;
