adjust save action

--- a/src/app/components/atoms/header/header.component.html
+++ b/src/app/components/atoms/header/header.component.html
@@ -1,1 +1,1 @@
-<h1>{{ ss.pageTap.$fractal()?.name }} {{ ss.modifierTap.$fractal()?.name }}</h1>
+<h1>{{ ss.page.$fractal()?.name }} {{ ss.modifier.$fractal()?.name }}</h1>
