--- a/src/app/components/atoms/manager/manager.component.html
+++ b/src/app/components/atoms/manager/manager.component.html
@@ -1,4 +1,4 @@
-@if (ss.managerTap.$fractal(); as fractal) {
+@if (ss.manager.$fractal(); as fractal) {
   <button mat-mini-fab appClick (onClick)="onClick(fractal)" (onHoldClick)="onHoldClick(fractal)">
     <mat-icon>{{ fractal.icon }}</mat-icon>
   </button>
