--- a/src/app/components/organisms/sidenav/sidenav.component.html
+++ b/src/app/components/organisms/sidenav/sidenav.component.html
@@ -5,7 +5,7 @@
     class="mat-drawer-app-sidenav"
     mode="side"
     position="end">
-    <app-sidenav-taps></app-sidenav-taps>
+    <app-sidenavs></app-sidenavs>
   </mat-drawer>
   <router-outlet></router-outlet>
 </mat-drawer-container>
