delete redounted route

--- a/src/app/components/organisms/modifier/modifier.component.html
+++ b/src/app/components/organisms/modifier/modifier.component.html
@@ -1,4 +1,18 @@
 @if (fractals[0]; as fractal) {
+  @if (modifier === 'Add') {
+    <form>
+      <mat-list role="list" class="input-list">
+        @for (indicator of sort; track indicator) {
+          <mat-list-item role="listitem" class="list-item">
+            <app-input
+              [label]="indicator"
+              [control]="fractal.getFormControl(indicator)"></app-input>
+          </mat-list-item>
+        }
+      </mat-list>
+    </form>
+  }
+
   @if (modifier === 'Edit') {
     <form>
       <mat-list role="list" class="input-list">
